trying to fix the overlap on different ratios

--- a/static/style.css
+++ b/static/style.css
@@ -88,82 +88,82 @@
   
   p:nth-of-type(1){
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+    font-size: 156.25%;
     width: 50%;
-    margin-left: 50px;
+    margin-left: 3.2%;
     color: #87CEEB;
   }
   
   p:nth-of-type(2){
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+    font-size: 156.25%;
     width: 50%;
-    margin-left: 50px;
+    margin-left: 3.2%;
     color: #87CEEB;
   }
   
   p:nth-of-type(3){
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    margin-left: 10px;
-    margin-top: 150px;
+    font-size: 156.25%;
+    margin-left: 0.6%;
+    margin-top: 9.7%;
     color: #87CEEB;
   }
   
   p:nth-of-type(4){
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-top: 150px;
+    font-size: 156.25%;
+    margin-right: 0.6%;
+    margin-top: 9.7%;
   }
   
   p:nth-of-type(5){
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    margin-left: 10px;
-    margin-top: 150px;
+    font-size: 156.25%;
+    margin-left: 0.6%;
+    margin-top: 9.7%;
   }
   
   p:nth-of-type(6){
     font-family: 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    margin-left: 10px;
-    margin-top: 150px;
+    font-size: 156.25%;
+    margin-left: 0.6%;
+    margin-top: 9.7%;
   }
   
   p:nth-of-type(7){
     font-family: 'Trebuchet MS', sans-serif;
-    margin-left: 10px;
-    margin-top: 500px;
+    margin-left: 0.6%;
+    margin-top: 32.5%;
   }
   
   p:nth-of-type(8){
     font-family: 'Trebuchet MS', sans-serif;
-    margin-left: 10px;
-    margin-top: 500px;
+    margin-left: 0.6%;
+    margin-top: 32.5%;
   }
   
   .img_1{
     float:right;
-    margin-top: 175px;
-    margin-right: 200px;
+    margin-top: 11.39%;
+    margin-right: 13%;
     width:27.7%;
     height:auto;
   }
   
   .img_2{
-    margin-top: 175px;
-    margin-right: 200px;
-    margin-left: 60px;
+    margin-top: 11.39%;
+    margin-right: 13%;
+    margin-left: 3.9%;
     width:27.7%;
     height:27.7%;
     float: left;
   }
   
   .img_3{
-    margin-top: 100px;
-    margin-right: 200px;
-    margin-left: 60px;
+    margin-top: 6.5%;
+    margin-right: 13%;
+    margin-left: 3.9%;
     width:13.8%;
     height:13.8%;
     float: left;
@@ -171,45 +171,45 @@
   }
   
   .img_4{
-    margin-top: 100px;
-    margin-right: 200px;
-    margin-left: 120px;
+    margin-top: 6.5%;
+    margin-right: 13%;
+    margin-left: 7.8%;
     width:13.8%;
     height:13.8%;
     float: right;
   }
   
   .img_5{
-    margin-top: 100px;
-    margin-right: 200px;
-    margin-left: 120px;
+    margin-top: 6.5%;
+    margin-right: 13%;
+    margin-left: 7.8%;
     float: left;
     width: 23.1%;
     height:34.7%;
   }
   
   .img_6{
-    margin-top: 100px;
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-top: 6.5%;
+    margin-right: 13%;
+    margin-left: 13%;
     float: right;
     width:20.8%;
     height:19%;
   }
   
   .img_7{
-    margin-top: 200px;
-    margin-right: 150px;
-    margin-left: 150px;
+    margin-top: 13%;
+    margin-right: 9.76%;
+    margin-left: 9.76%;
     float: left;
     width: 24.3%;
     height:24.3%;
   }
   
   .img_8{
-    margin-top: 200px;
-    margin-right: 150px;
-    margin-left: 150px;
+    margin-top: 13%;
+    margin-right: 9.76%;
+    margin-left: 9.76%;
     float: right;
     width: 34.7%;
     height:23.5%;
@@ -221,7 +221,7 @@
   }
   
   footer {
-    height:50px;
+    height:7%;
     background-color: #36454F;
     color: #fff;
   }
